--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,34 @@
     <string name="progressInit">Initialize Local Database</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
-    <string name="dialog_permission_overlay_no">Overlay permission is needed to show alarm on the background</string>
+    <string name="dialog_permission_overlay_no">Need overlay permission to use this app</string>
     <string name="dialog_yes">Yes</string>
+    <string name="alarm">Alarm name</string>
+    <string name="alarmSet_AM">AM</string>
+    <string name="alarmSet_PM">PM</string>
+
+    <!-- Weekend -->
+    <string name="monday_short">M</string>
+    <string name="tuesday_short">T</string>
+    <string name="wednesday_short">W</string>
+    <string name="thursday_short">T</string>
+    <string name="friday_short">F</string>
+    <string name="saturday_short">S</string>
+    <string name="sunday_short">S</string>
+
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+
+
+    <!-- about Dialog -->
+    <string name="dialog_permission_title">Permission</string>
+    <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
