setting music index problem(Null problem)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="save">save</string>
     <string name="cancel">cancel</string>
     <string name="ok">OK</string>
+    <string name="play">play</string>
+    <string name="stop">stop</string>
 
 
     <!-- Weekend -->
@@ -31,6 +33,7 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
 
+    
     <!-- Alarm Set -->
     <string name="alarmSet_selectBell">Alarm Bell</string>
     <string name="alarmSet_selectMode">Alarm Mode</string>
@@ -43,11 +46,20 @@
     <string name="alarmSet_alarmModeItem1">Normal</string>
     <string name="alarmSet_alarmModeItem2">Calculator</string>
     <string name="alarmSet_calRepeat">Calculate Repeat</string>
-
+    
 
     <!-- about Dialog -->
     <string name="dialog_permission_title">Permission</string>
     <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
+    <string name="dialog_bell_set_title">Bell Select</string>
+    
+    
+    <!-- bell type-->
+    <string name="bellType_Normal_Walking">Walking</string>
+    <string name="bellType_Normal_PianoMan">PianoMan</string>
+    <string name="bellType_Normal_Happy">HappyTown</string>
+    <string name="bellType_Normal_Lonely">Lonely</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
