--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,8 @@
     <string name="dialog_permission_title">Permission</string>
     <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
     <string name="dialog_bell_set_title">Bell Select</string>
-
+    <string name="dialog_delete_title">Delete Alarm</string>
+    <string name="dialog_delete_content">Do you want to delete this alarm?</string>
 
     <!-- bell type-->
     <string name="bellType_Normal_Walking">Walking</string>
