--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,13 @@
     <string name="alarmSet_PM">PM</string>
     <string name="save">save</string>
     <string name="update">update</string>
-    <string name="cancel">cancel</string>
+    <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="play">play</string>
     <string name="stop">stop</string>
     <string name="ten_minutes_later">10minutes</string>
 
-    <!-- -->
+    <!-- error message -->
     <string name="on_alarm_error">Error!!: Could not read alarm data</string>
 
 
@@ -78,6 +78,7 @@
     <string name="alarm_notification_channel_name">Nearest Alarm</string>
     <string name="weather_notification_channel_id">alarmChanel</string>
     <string name="weather_notification_channel_name">Nearest Alarm</string>
+    <string name="alarm_notification_title">Next alarm</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
