fix bug(ampm problem) 1. delete ampm in item_layout 2. fix 12hour am pm problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <!-- error message -->
     <string name="on_alarm_error">Error!!: Could not read alarm data</string>
 
-
     <!-- Weekend -->
     <string name="monday_short">M</string>
     <string name="tuesday_short">T</string>
@@ -37,7 +36,6 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
-
 
     <!-- Alarm Set -->
     <string name="alarmSet_selectBell">Alarm Bell</string>
@@ -58,7 +56,7 @@
     <string name="alarmSet_10minButton">+10min</string>
     <string name="alarmSet_5minButton">+5min</string>
     <string name="alarmSet_1minButton">+1min</string>
-    <string name="alarmSet_Toast_min">Please set at least one minute</string>
+
 
     <!-- about Dialog -->
     <string name="dialog_permission_title">Permission</string>
@@ -79,6 +77,10 @@
     <string name="weather_notification_channel_id">alarmChanel</string>
     <string name="weather_notification_channel_name">Nearest Alarm</string>
     <string name="alarm_notification_title">Next alarm</string>
+
+    <!-- Toast -->
+    <string name="toast_set_minimum_time">Please set at least one minute</string>
+    <string name="toast_ten_minute_later">Alarm goes off 10minutes later</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
