--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="progressInit">Initialize Local Database</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
-    <string name="dialog_permission_overlay_no">Need overlay permission to use this app</string>
-    <string name="dialog_yes">Yes</string>
     <string name="alarm">Alarm name</string>
     <string name="alarmSet_AM">AM</string>
     <string name="alarmSet_PM">PM</string>
@@ -61,9 +59,11 @@
     <!-- about Dialog -->
     <string name="dialog_permission_title">Permission</string>
     <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
+    <string name="dialog_notification_permission_message">Notification is essential to use QuickAlarm</string>
     <string name="dialog_bell_set_title">Bell Select</string>
     <string name="dialog_delete_title">Delete Alarm</string>
     <string name="dialog_delete_content">Do you want to delete this alarm?</string>
+    <string name="dialog_permission_overlay_no">Need overlay permission to use this app</string>
 
     <!-- bell type-->
     <string name="bellType_Normal_Walking">Walking</string>
