1. 코드 리팩토링 2. Notification에 Action 버튼 셋팅 3. Action 버튼 클릭 시 Broadcast에서 반응하게 하기 4. Broadcast에서 반응 시 Worker 실행하게 하기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,9 @@
     <string name="weather_notification_channel_id">alarmChanel</string>
     <string name="weather_notification_channel_name">Weather Alarm</string>
     <string name="alarm_notification_title">Next alarm</string>
+    <string name="actionButton1">+10Min</string>
+    <string name="actionButton2">+15Min</string>
+    <string name="actionButton3">+30Min</string>
 
     <!-- Toast -->
     <string name="toast_set_minimum_time">Please set at least one minute</string>
