--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="play">play</string>
     <string name="stop">stop</string>
     <string name="ten_minutes_later">10minutes</string>
+    <string name="time_split">:</string>
 
     <!-- error message -->
     <string name="on_alarm_error">Error!!: Could not read alarm data</string>
