--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- common text -->
     <string name="app_name">PairAlarm</string>
     <string name="progressFinish">Done!</string>
     <string name="progressInit">Initialize Local Database</string>
@@ -15,6 +16,20 @@
     <string name="stop">stop</string>
     <string name="ten_minutes_later">10minutes</string>
     <string name="time_split">:</string>
+    <string name="problem_plus">+</string>
+    <string name="problem_equal">=</string>
+
+    <!-- Calculator Text -->
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="zero">0</string>
 
     <!-- error message -->
     <string name="on_alarm_error">Error!!: Could not read alarm data</string>
