OnAlarmActivity에 계산 문제 기능 설정 1. 최대 입력 가능 문자수 초과(3자)하면 진동 울리면서 초기화 2. 정답 맞추면 액티비티 바로 꺼짐

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,6 @@
     <string name="alarmSet_1minButton">+1min</string>
     <string name="alarmSet_default_time">00</string>
 
-
     <!-- about Dialog -->
     <string name="dialog_permission_title">Permission</string>
     <string name="dialog_overlay_message">Overlay permission is necessary to show alarm on the background</string>
@@ -101,5 +100,7 @@
     <string name="toast_set_minimum_time">Please set at least one minute</string>
     <string name="toast_ten_minute_later">Alarm goes off 10minutes later</string>
     <string name="toast_get_dataStore_error">Fail to get data from dataStore</string>
+    <string name="toast_correct_calculator_answer">Correct answer!!</string>
+    <string name="toast_wrong_calculator_answer">Wrong answer. Please put again.</string>
 
 </resources>
