--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
+    <!-- Setting Contents -->
+    <string name="quickAlarm_bell">QuickAlarm Bell</string>
+    <string name="quickAlarm_mode">QuickAlarm Mode</string>
+    <string name="quickAlarm_vibrate">QuickAlarm Vibrate</string>
+    <string name="blank"> </string>
+    <string name="user_guide">User Guide</string>
+    <string name="app_info">App Info</string>
+
+    <!-- User Guide Contents -->
+    <string name="background_white_list">Register Background White List</string>
+    <string name="battery_optimize">Set Battery Optimize</string>
+
     <!-- common text -->
     <string name="app_name">PairAlarm</string>
     <string name="progressFinish">Done!</string>
@@ -102,5 +114,7 @@
     <string name="toast_get_dataStore_error">Fail to get data from dataStore</string>
     <string name="toast_correct_calculator_answer">Correct answer!!</string>
     <string name="toast_wrong_calculator_answer">Wrong answer. Please put again.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
